--- a/.github/workflows/deployment-script.yml
+++ b/.github/workflows/deployment-script.yml
@@ -1,5 +1,3 @@
-# This workflow is used to build the experiment and push it to github pages
-
 name: Deploy Testing Branch
 
 on:
@@ -25,6 +23,10 @@ jobs:
           cd ph3-lab-mgmt
           npm install
           npm run build-exp
+          if [ ! -d "build" ]; then
+            echo "Error: Build directory not found!"
+            exit 1
+          fi
           cd ..
 
       - name: Prepare gh-pages branch
@@ -34,9 +36,14 @@ jobs:
           git checkout --orphan gh-pages
           git reset
           rm -rf plugins  # Remove conflicting directory if exists
-          git add ph3-lab-mgmt/build/* -f
-          git mv ph3-lab-mgmt/build/* ./ -f
-          git commit -m "https://virtual-labs.github.io/${{ github.repository }} click on the link to test your code."
+          if [ -d "ph3-lab-mgmt/build" ]; then
+            git add ph3-lab-mgmt/build/* -f
+            git mv ph3-lab-mgmt/build/* ./ -f
+            git commit -m "https://virtual-labs.github.io/${{ github.repository }} click on the link to test your code."
+          else
+            echo "Error: Build directory is empty or missing!"
+            exit 1
+          fi
 
       - name: Push to gh-pages
         uses: ad-m/github-push-action@master
